# mu2edaq-bigredbox

./: .gitignore  BUILD.md  CLAUDE.md  README.md  config.py  daq_alert.py  demo_sender.py  requirements.txt  start-mu2edaq-bigredbox.sh  start_daq_alert.sh  stop-mu2edaq-bigredbox.sh  stop_daq_alert.sh
libs/: BUILD.md  CMakeLists.txt
libs/c/: CMakeLists.txt
libs/c/include/: daq_alert.h
libs/c/src/: daq_alert.c
libs/cpp/: CMakeLists.txt
libs/cpp/include/: daq_alert.hpp
libs/cpp/src/: daq_alert.cpp
libs/examples/: CMakeLists.txt
libs/examples/example-sender-c/: CMakeLists.txt  example-sender-c.1  main.c
libs/examples/example-sender-cpp/: CMakeLists.txt  example-sender-cpp.1  main.cpp
libs/examples/example-sender-py/: CMakeLists.txt  example-sender-py  example-sender-py.1
libs/python/: CMakeLists.txt  pyproject.toml
libs/python/daq_alert/: __init__.py  _sender.py
